correcting pictures path

--- a/fansite3.html
+++ b/fansite3.html
@@ -7,7 +7,7 @@
         <meta name="author" content="Noa Cengarle">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="fansite3.css">
-        <link rel="icon" type="image/x-icon" href="./Images/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
         <title>La Scaloneta</title>
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -39,12 +39,12 @@
         </header>
 
         <main>
-            <img src="./Images/todosjuntoss.jpg" alt="Photo de toute l'équipe d'Argentine" class="todos">
+            <img src="./images/todosjuntoss.jpg" alt="Photo de toute l'équipe d'Argentine" class="todos">
 
             <section class="articles">
 
                 <article class="histoire">
-                    <img src="./Images/scaloni.jpeg" alt="Lionel Scaloni">
+                    <img src="./images/scaloni.jpeg" alt="Lionel Scaloni">
                     <div class="text"><a href="histoire.html">
                         <h2>Lionel Scaloni</h2>
                         <p>Né le 16 mai 1978 à Rosario, province de Santa Fe, est un footballeur 
@@ -63,12 +63,12 @@
                             option pour prolonger son contrat jusqu'à la Copa América 2020.
                         </p>
                     </a></div>
-                    <img src="./Images/scaloneta.webp" alt="Image du bus de l'équipe d'Argentine" 
+                    <img src="./images/scaloneta.webp" alt="Image du bus de l'équipe d'Argentine" 
                     class="mobile">
                 </article>
 
                 <article class="worldcup">
-                    <img src="./Images/coupe.png" alt="Coupe du monde" class="copa">
+                    <img src="./images/coupe.png" alt="Coupe du monde" class="copa">
                     <div class="text"><a href="worldcup.html">
                         <h2>FIFA World Cup 2022</h2>
                         <p>La Coupe du monde de football 2022 est la 22e édition de ce tournoi quadriennal. 
@@ -85,12 +85,12 @@
                             et la Pologne.
                         </p>
                     </a></div>
-                    <img src="./Images/mascotte.png" alt="La'eeb, mascotte de la coupe du monde 2022" 
+                    <img src="./images/mascotte.png" alt="La'eeb, mascotte de la coupe du monde 2022" 
                     class="mascotte mobile">
                 </article>
 
                 <article class="phenomene">
-                    <img src="./Images/bus5.webp" alt="Les champions du monde dans le bus">
+                    <img src="./images/bus5.webp" alt="Les champions du monde dans le bus">
                     <div class="text"><a href="phenomene.html">
                         <h2>Le phénomène social</h2>
                         <p>Depuis le dernier penalty victorieux de Montiel, une surenchère de chansons, 
@@ -112,7 +112,7 @@
                             à dû être évacuée en hélicoptère.
                         </p>
                     </a></div>
-                    <img src="./Images/evacuacion.jpg" alt="La Scaloneta, évacuée par hélicoptère" 
+                    <img src="./images/evacuacion.jpg" alt="La Scaloneta, évacuée par hélicoptère" 
                     class="mobile">
                 </article>
 
@@ -126,7 +126,7 @@
 
                 <article class="menuFooter">
                     <div class="titre">
-                        <img src="./Images/limonade.svg" alt="logo de Limonade" class="logo">
+                        <img src="./images/limonade.svg" alt="logo de Limonade" class="logo">
                         <h2 class="limonade"><a href="index.html">Limonade</a></h2>
                     </div>
                     <ul>
@@ -153,19 +153,19 @@
                 <article class="menuReseaux">
                     <ul class="icon">
                         <li><a href="https://www.afa.com.ar/es/" target="_blank"><img 
-                            src="./Images/afa.png" alt="logo Afa" class="redes"></a></li>
+                            src="./images/afa.png" alt="logo Afa" class="redes"></a></li>
                         <li><a href="https://www.conmebol.com/" target="_blank"><img 
-                            src="./Images/conmebol.png" alt="logo Conmebol" class="redes"></a></li>
+                            src="./images/conmebol.png" alt="logo Conmebol" class="redes"></a></li>
                         <li><a href="https://www.instagram.com/afaseleccion/" target="_blank"><img 
-                            src="./Images/instagram.svg" alt="logo Instagram" class="redes"></a></li>
+                            src="./images/instagram.svg" alt="logo Instagram" class="redes"></a></li>
                     </ul>
                     <ul class="icon">
                         <li><a href="https://www.facebook.com/AFASeleccionArgentina" target="_blank"><img 
-                            src="./Images/facebook.svg" alt="logo Facebook" class="redes"></a></li>
+                            src="./images/facebook.svg" alt="logo Facebook" class="redes"></a></li>
                         <li><a href="https://www.youtube.com/@AFASeleccion" target="_blank"><img 
-                            src="./Images/youtube.svg" alt="logo Youtube" class="redes"></a></li>
+                            src="./images/youtube.svg" alt="logo Youtube" class="redes"></a></li>
                         <li><a href="https://www.tiktok.com/@afaseleccion" target="_blank"><img 
-                            src="./Images/tiktok.svg" alt="logo Tiktok" class="redes"></a></li>
+                            src="./images/tiktok.svg" alt="logo Tiktok" class="redes"></a></li>
                     </ul>
                 </article>
 
