--- a/histoire.html
+++ b/histoire.html
@@ -7,7 +7,7 @@
         <meta name="author" content="Noa Cengarle">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="fansite3.css">
-        <link rel="icon" type="image/x-icon" href="./Images/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
         <title>La Scaloneta</title>
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -47,7 +47,7 @@
                         international argentin devenu entraîneur.
                         En 2018, après des expériences ratées avec d’autres entraîneurs, 
                         l'AFA choisit d'offrir le poste d’entraîneur par intérim à Lionel Scaloni.
-                        <img src="./Images/scaloni2.png" alt="Lionel Scaloni" class="portrait left"> 
+                        <img src="./images/scaloni2.png" alt="Lionel Scaloni" class="portrait left"> 
                         Sa nomination provoque une grande surprise, étant donné que l'expérience 
                         du jeune entraîneur se réduit uniquement à avoir dirigé l'équipe U-20 avec 
                         Pablo Aima.</p>
@@ -64,7 +64,7 @@
                         Lisandro Martínez de Defensa et Justicia.</p>
                     <p>Scaloni a débuté son mandat lors du double rendez-vous de la FIFA en septembre, 
                         lors d'une tournée aux États-Unis.
-                        <img src="./Images/scaloni_2018.jpg" alt="Lionel Scaloni, Pablo Aimar et Walter Samuel"
+                        <img src="./images/scaloni_2018.jpg" alt="Lionel Scaloni, Pablo Aimar et Walter Samuel"
                         class="paysage right">
                         Grâce au bilan positif des matchs amicaux et à la bonne image que l'équipe 
                         d'entraîneurs a acquise parmi les joueurs convoqués et la direction de la 
@@ -81,7 +81,7 @@
                         qu'entraîneur, puisqu'il avait seulement dirigé l'équipe nationale de 
                         football d'Argentine des moins de 20 ans avant de prendre ses 
                         fonctions.
-                        <img src="./Images/america19.jpg" 
+                        <img src="./images/america19.jpg" 
                         alt="Equipe d'Argentine lors de la Copa América 2019" class="paysage left">
                         La presse a comparé le "jeune homme inexpérimenté" Scaloni à 
                         d'autres grands noms qui, selon les rumeurs, dirigeraient l'équipe nationale, 
@@ -94,7 +94,7 @@
                         Le retour tant attendu du capitaine de l'équipe et meilleur buteur de 
                         tous les temps a eu lieu le 22 mars 2019 lors d'un match amical contre 
                         le Venezuela.
-                        <img src="./Images/scaloneta.webp" alt="Image du bus de l'équipe d'Argentine" 
+                        <img src="./images/scaloneta.webp" alt="Image du bus de l'équipe d'Argentine" 
                         class="portrait right">
                         <br>
                         Compte tenu du réajustement des attentes produit après l'échec de 2018 et 
@@ -123,7 +123,7 @@
                         laissant de côté deux habitués du cycle, Dybala et Ocampos.
                         L'équipe dirigée par Lionel Scaloni formait le groupe A avec l'Uruguay, 
                         le Paraguay, le Chili et la Bolivie.
-                        <img src="./Images/scaloni_copa_america21.jpg" 
+                        <img src="./images/scaloni_copa_america21.jpg" 
                         alt="Scaloni jetté en l'air par son équipe" class="paysage left scaloni">
                         Leur classement en première position les a amenés à se retrouver en quarts 
                         de finale avec l'Équateur, qui occupait la quatrième position du groupe B. 
@@ -137,7 +137,7 @@
                         a ainsi atteint la finale de la Coupe contre le vainqueur du Brésil-Pérou.</p>
                     <p>Le 10 juillet, l'équipe argentine affrontait le Brésil au stade Maracaná de 
                         la ville de Rio de Janeiro pour la finale de la Copa América 2021. 
-                        <img src="./Images/america21.jpg" alt="Argentine gagne la Copa América 2019" 
+                        <img src="./images/america21.jpg" alt="Argentine gagne la Copa América 2019" 
                         class="paysage right">
                         L'équipe a été sacrée championne (0-1), mettant fin à une disette de 28 ans sans titres 
                         internationaux, au cours de laquelle l'équipe a perdu quatre finales de la 
@@ -157,7 +157,7 @@
 
                 <article class="finalissima">
                     <h2>Finalíssima 2022</h2>
-                    <img src="./Images/finalissima.avif" 
+                    <img src="./images/finalissima.avif" 
                         alt="L'équipe d'Argentine avec le trophée de la Finalíssima" class="center">
                     <p>L'équipe s'est préparée à jouer la Finalíssima contre l'équipe italienne, 
                         tous deux champions de leurs tournois continentaux respectifs. 
@@ -179,7 +179,7 @@
                     <p>Lors de la cérémonie de remise des prix, Messi a remporté le Ballon d'Or 
                         du meilleur joueur de la compétition, étant le seul footballeur à avoir 
                         obtenu cet exploit à deux reprises (le précédent était finaliste en 2014).
-                        <img src="./Images/trofeos_mundial.jpg" 
+                        <img src="./images/trofeos_mundial.jpg" 
                         alt="Messi, Dibu et Fernandez avec leurs trophées" class="trofeos left">
                         Il a également remporté le Soulier d'Argent en tant que deuxième meilleur 
                         buteur, à un but de Mbappé. De son côté, Emiliano Martínez a remporté 
@@ -190,7 +190,7 @@
                     <p>Le travail de Lionel Scaloni a été souligné dans la presse sportive pour 
                         sa flexibilité dans l'adaptation de la stratégie aux exigences de chaque 
                         rival, 
-                        <img src="./Images/scaloni_copa_mundo.webp" alt="Scaloni soulevant la Coupe du monde"
+                        <img src="./images/scaloni_copa_mundo.webp" alt="Scaloni soulevant la Coupe du monde"
                         class="trofeos right">
                         sans avoir recours à un entraînement répété ou à une approche tactique 
                         dans aucun des sept matches de la Coupe du monde. D'autre part, la lucidité 
@@ -215,7 +215,7 @@
 
                 <article class="america24">
                     <h2>Copa América 2024</h2>
-                    <img src="./Images/copa_america24.jpg" 
+                    <img src="./images/copa_america24.jpg" 
                         alt="L'Argentine championne de la Copa América 2024" class="center">
                     <p>L'équipe argentine a commencé sa participation à la Copa América 2024 
                         organisée aux États-Unis en tant que championne en titre. L'équipe de 
@@ -255,7 +255,7 @@
 
                 <article class="menuFooter">
                     <div class="titre">
-                        <img src="./Images/limonade.svg" alt="logo de Limonade" class="logo">
+                        <img src="./images/limonade.svg" alt="logo de Limonade" class="logo">
                         <h2 class="limonade"><a href="index.html">Limonade</a></h2>
                     </div>
                     <ul>
@@ -282,19 +282,19 @@
                 <article class="menuReseaux">
                     <ul class="icon">
                         <li><a href="https://www.afa.com.ar/es/" target="_blank"><img 
-                            src="./Images/afa.png" alt="logo Afa" class="redes"></a></li>
+                            src="./images/afa.png" alt="logo Afa" class="redes"></a></li>
                         <li><a href="https://www.conmebol.com/" target="_blank"><img 
-                            src="./Images/conmebol.png" alt="logo Conmebol" class="redes"></a></li>
+                            src="./images/conmebol.png" alt="logo Conmebol" class="redes"></a></li>
                         <li><a href="https://www.instagram.com/afaseleccion/" target="_blank"><img 
-                            src="./Images/instagram.svg" alt="logo Instagram" class="redes"></a></li>
+                            src="./images/instagram.svg" alt="logo Instagram" class="redes"></a></li>
                     </ul>
                     <ul class="icon">
                         <li><a href="https://www.facebook.com/AFASeleccionArgentina" target="_blank"><img 
-                            src="./Images/facebook.svg" alt="logo Facebook" class="redes"></a></li>
+                            src="./images/facebook.svg" alt="logo Facebook" class="redes"></a></li>
                         <li><a href="https://www.youtube.com/@AFASeleccion" target="_blank"><img 
-                            src="./Images/youtube.svg" alt="logo Youtube" class="redes"></a></li>
+                            src="./images/youtube.svg" alt="logo Youtube" class="redes"></a></li>
                         <li><a href="https://www.tiktok.com/@afaseleccion" target="_blank"><img 
-                            src="./Images/tiktok.svg" alt="logo Tiktok" class="redes"></a></li>
+                            src="./images/tiktok.svg" alt="logo Tiktok" class="redes"></a></li>
                     </ul>
                 </article>
 
