--- a/phenomene.html
+++ b/phenomene.html
@@ -7,7 +7,7 @@
         <meta name="author" content="Noa Cengarle">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="fansite3.css">
-        <link rel="icon" type="image/x-icon" href="./Images/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
         <title>La Scaloneta</title>
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -248,7 +248,7 @@
 
                 <article class="menuFooter">
                     <div class="titre">
-                        <img src="./Images/limonade.svg" alt="logo de Limonade" class="logo">
+                        <img src="./images/limonade.svg" alt="logo de Limonade" class="logo">
                         <h2 class="limonade"><a href="index.html">Limonade</a></h2>
                     </div>
                     <ul>
@@ -275,19 +275,19 @@
                 <article class="menuReseaux">
                     <ul class="icon">
                         <li><a href="https://www.afa.com.ar/es/" target="_blank"><img 
-                            src="./Images/afa.png" alt="logo Afa" class="redes"></a></li>
+                            src="./images/afa.png" alt="logo Afa" class="redes"></a></li>
                         <li><a href="https://www.conmebol.com/" target="_blank"><img 
-                            src="./Images/conmebol.png" alt="logo Conmebol" class="redes"></a></li>
+                            src="./images/conmebol.png" alt="logo Conmebol" class="redes"></a></li>
                         <li><a href="https://www.instagram.com/afaseleccion/" target="_blank"><img 
-                            src="./Images/instagram.svg" alt="logo Instagram" class="redes"></a></li>
+                            src="./images/instagram.svg" alt="logo Instagram" class="redes"></a></li>
                     </ul>
                     <ul class="icon">
                         <li><a href="https://www.facebook.com/AFASeleccionArgentina" target="_blank"><img 
-                            src="./Images/facebook.svg" alt="logo Facebook" class="redes"></a></li>
+                            src="./images/facebook.svg" alt="logo Facebook" class="redes"></a></li>
                         <li><a href="https://www.youtube.com/@AFASeleccion" target="_blank"><img 
-                            src="./Images/youtube.svg" alt="logo Youtube" class="redes"></a></li>
+                            src="./images/youtube.svg" alt="logo Youtube" class="redes"></a></li>
                         <li><a href="https://www.tiktok.com/@afaseleccion" target="_blank"><img 
-                            src="./Images/tiktok.svg" alt="logo Tiktok" class="redes"></a></li>
+                            src="./images/tiktok.svg" alt="logo Tiktok" class="redes"></a></li>
                     </ul>
                 </article>
 
